[metadata]
name = momlevel
version = 0.0.1
description = Tools to diagnose sea level in the MOM Ocean Model
url = https://github.com/jkrasting/momlevel
author = John Krasting
author_email = john.krasting@noaa.gov
keywords = oceanography sealevel sea level sea-level slr mom mom6 model ocean
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: Public Domain
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
long_description_content_type=text/x-rst
long_description =
    **momlevel** is a Python package in the public domain
    that provides documentation and routines for analyzing sea level and
    related quantities in MOM6-class models. The package initially focuses
    on global and local steric sea level change in non-Boussinesq configurations.

    More Information
    ----------------
    - Source code: `<http://github.com/jkrasting/momlevel>`_
[options]
packages = momlevel
zip_safe = False
include_package_data = False
python_requires = >=3.7
install_requires =
    numpy>=1.21.0
    xarray>=0.20.0